--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ContextLock</string>
-    <string name="pinlock_title">Enter Pin Code</string>
+    <string name="pinlock_title">Use PIN!</string>
     <string name="pinlock_settitle">Set Pin Code</string>
     <string name="pinlock_notitle"></string>
     <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
@@ -9,14 +9,14 @@
     <string name="pinlock_secondPin">Enter Pin Code Again</string>
     <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
     <string name="pinlock_fingerprint">Use Fingerprint</string>
-    <string name="pinlock_pin">Fingerprint might not working. Use PIN</string>
+    <string name="pinlock_pin">Your fingerprint might not work.</string>
     <string name="set_pin">Change PIN</string>
     <string name="set_id">Enter your received ID</string>
     <string name="settings">Settings</string>
     <string name="title_activity_experience_sampling">ExperienceSamplingActivity</string>
     <string name="feedback_survey">Feedback on ContextLockScreen</string>
 
-    <string name="prediction_precision">The prediction is true</string>
+    <string name="prediction_precision">The given reason is true</string>
     <string name="strongly_agree">strongly agree</string>
     <string name="agree">agree</string>
     <string name="neutral">neutral</string>
@@ -42,7 +42,7 @@
     <string name="activity_tilting">tilting</string>
     <string name="activity_walking">walking</string>
     <string name="user_location_string">I am ...</string>
-    <string name="reasonable_switch">I think the switch to PIN/pattern was reasonable</string>
+    <string name="reasonable_switch">I think the switch to PIN/pattern was/ would have been appropriate</string>
     <string name="public_transportation">in public transportation (z.B. bus, train, metro,...)</string>
     <string name="at_work">at work</string>
     <string name="at_uni">in university</string>
@@ -61,6 +61,7 @@
     <string name="rain">It\'s raining!</string>
     <string name="snow">It\'s snowing!</string>
     <string name="wet">It\'s wet!</string>
+    <string name="muggy">It\'s muggy!</string>
     <string name="humdidity">It\'s muggy!</string>
     <string name="running">Sport detected!</string>
     <string name="in_vehicle">Driving detected!</string>
@@ -102,7 +103,7 @@
 
     <string name="no_condition_message">no condition met</string>
     <string name="previous">back</string>
-    
+
     <string name="profession_student">Student</string>
     <string name="profession_postgraduate">Ph.D.student</string>
     <string name="profession_employee">Employee</string>
@@ -111,6 +112,6 @@
     <string name="female">female</string>
     <string name="male">male</string>
 
-    <string name="text_alignment_survey_btn">center</string>
+    <string name="admin_explanation">Unlock events are logged anonymously for study analytics</string>
 
 </resources>
