--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,17 @@
     <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
     <string name="pinlock_fingerprint">Use Fingerprint</string>
     <string name="pinlock_pin">Your fingerprint might not work.</string>
-    <string name="set_pin">Change PIN</string>
+    <string name="set_pin">Change PIN/Pattern</string>
     <string name="set_id">Enter your received ID</string>
     <string name="settings">Settings</string>
     <string name="title_activity_experience_sampling">ExperienceSamplingActivity</string>
     <string name="feedback_survey">Feedback on ContextLockScreen</string>
+
+    <string name="patternlock_title">Use Pattern!</string>
+    <string name="patternlock_settitle">Set Pattern</string>
+    <string name="patternlock_wrongpin">Wrong Pattern</string>
+    <string name="patternlock_secondPin">Enter Pattern Again</string>
+    <string name="patternlock_tryagain">Pattern Are Not The Same</string>
 
     <string name="prediction_precision">The given reason is true</string>
     <string name="strongly_agree">strongly agree</string>
@@ -88,6 +94,8 @@
     <string name="permission_weather"> &#8226; weather data</string>
     <string name="permission_activity"> &#8226; activities (walking, running, driving)</string>
     <string name="permission_demographics"> &#8226; demographics</string>
+    <string name="permission_lockscreen_data"> &#8226; lock screen data </string>
+
 
     <string name="anonymity">The collected data are recorded anonymised and cannot be assigned to my person. Therefor inspection or
     deletion of those data are not possible</string>
